# Raw-Processor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/processor/: admin.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
apps/processor/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
